package com.yhchat.canary.data.websocket

import android.app.NotificationChannel
import android.app.NotificationManager
import android.app.PendingIntent
import android.content.Context
import android.content.Intent
import android.os.Build
import android.util.Log
import androidx.core.app.NotificationCompat
import com.google.gson.Gson
import com.google.gson.JsonObject
import com.yhchat.canary.MainActivity
import com.yhchat.canary.R
import com.yhchat.canary.data.model.ChatMessage
import com.yhchat.canary.data.model.Conversation
import com.yhchat.canary.data.repository.TokenRepository
import com.yhchat.canary.data.repository.CacheRepository
import com.yhchat.canary.proto.chat_ws_go.heartbeat_ack
import com.yhchat.canary.proto.chat_ws_go.push_message
import com.yhchat.canary.proto.chat_ws_go.edit_message
import com.yhchat.canary.proto.chat_ws_go.draft_input
import com.yhchat.canary.proto.chat_ws_go.bot_board_message
import com.yhchat.canary.proto.chat_ws_go.stream_message
import com.yhchat.canary.proto.chat_ws_go.WsMsg
import kotlinx.coroutines.*
import kotlinx.coroutines.flow.MutableSharedFlow
import kotlinx.coroutines.flow.SharedFlow
import kotlinx.coroutines.flow.asSharedFlow
import okhttp3.*
import java.util.*
import java.util.concurrent.TimeUnit
import javax.inject.Inject
import javax.inject.Singleton

/**
 * WebSocketæœåŠ¡ï¼Œç”¨äºå®æ—¶æ¥æ”¶èŠå¤©æ¶ˆæ¯å’Œå‘é€è‰ç¨¿åŒæ­¥
 */
@Singleton
class WebSocketService @Inject constructor(
    private val tokenRepository: TokenRepository,
    private val context: Context
) {
    private val tag = "WebSocketService"
    private val gson = Gson()
    
    private var webSocket: WebSocket? = null
    private var heartbeatJob: Job? = null
    private var isConnected = false
    private var shouldReconnect = true
    private var currentUserId: String? = null
    private var currentDeviceId: String = UUID.randomUUID().toString().replace("-", "")
    
    private val scope = CoroutineScope(Dispatchers.IO + SupervisorJob())
    
    // æ¶ˆæ¯äº‹ä»¶æµ - ç”¨äºUIæ›´æ–°
    private val _messageEvents = MutableSharedFlow<MessageEvent>(
        replay = 0,
        extraBufferCapacity = 100
    )
    val messageEvents: SharedFlow<MessageEvent> = _messageEvents.asSharedFlow()
    
    // è¿æ¥çŠ¶æ€æµ
    private val _connectionState = MutableSharedFlow<ConnectionState>(
        replay = 1,
        extraBufferCapacity = 10
    )
    val connectionState: SharedFlow<ConnectionState> = _connectionState.asSharedFlow()

    // ä¼šè¯æ›´æ–°æµ - å½“æ”¶åˆ°æ–°æ¶ˆæ¯æ—¶æ›´æ–°ä¼šè¯åˆ—è¡¨
    private val _conversationUpdates = MutableSharedFlow<ConversationUpdate>(
        replay = 0,
        extraBufferCapacity = 50
    )
    val conversationUpdates: SharedFlow<ConversationUpdate> = _conversationUpdates.asSharedFlow()

    private val okHttpClient = OkHttpClient.Builder()
        .connectTimeout(10, TimeUnit.SECONDS)
        .readTimeout(0, TimeUnit.SECONDS) // ç¦ç”¨è¯»å–è¶…æ—¶ï¼Œä¾èµ–å¿ƒè·³æœºåˆ¶
        .writeTimeout(10, TimeUnit.SECONDS)
        .pingInterval(30, TimeUnit.SECONDS) // OkHttp è‡ªåŠ¨ ping/pong å¸§
        .retryOnConnectionFailure(true)
        .build()

    companion object {
        private const val NOTIFICATION_CHANNEL_ID = "chat_messages"
        private const val NOTIFICATION_ID_BASE = 1000
    }
    
    init {
        createNotificationChannel()
    }
    
    /**
     * è¿æ¥WebSocket
     */
    suspend fun connect(userId: String, platform: String = "windows") {
        if (isConnected && webSocket != null) {
            Log.d(tag, "Already connected")
            return
        }
        
        // ç¡®ä¿å®Œå…¨æ¸…ç†æ—§è¿æ¥
        webSocket?.let { oldSocket ->
            Log.d(tag, "Cleaning up old WebSocket connection")
            cleanup()
            oldSocket.close(1000, "Reconnecting")
            webSocket = null
            // ç­‰å¾…æ—§è¿æ¥å®Œå…¨å…³é—­
            delay(500)
        }

        val token = tokenRepository.getTokenSync()
        if (token == null) {
            Log.e(tag, "No token available")
            _connectionState.emit(ConnectionState.Error("æœªç™»å½•"))
            return
        }
        
        currentUserId = userId
        
        try {
            Log.d(tag, "Connecting to WebSocket...")
            _connectionState.emit(ConnectionState.Connecting)
            
            val request = Request.Builder()
                .url("wss://chat-ws-go.jwzhd.com/ws")
                .build()
            
            webSocket = okHttpClient.newWebSocket(request, object : WebSocketListener() {
                override fun onOpen(webSocket: WebSocket, response: Response) {
                    Log.d(tag, "WebSocket opened")
                    isConnected = true
                    
                    // å‘é€ç™»å½•è¯·æ±‚ - å‚è€ƒyh_user_sdk/core/ws.py
                    val loginData = JsonObject().apply {
                        addProperty("seq", UUID.randomUUID().toString().replace("-", ""))
                        addProperty("cmd", "login")
                        add("data", JsonObject().apply {
                            addProperty("userId", userId)
                            addProperty("token", token)
                            addProperty("platform", platform)
                            addProperty("deviceId", currentDeviceId)
                        })
                    }
                    
                    val loginJson = gson.toJson(loginData)
                    Log.d(tag, "Sending login: $loginJson")
                    webSocket.send(loginJson)
                    
                    scope.launch {
                        _connectionState.emit(ConnectionState.Connected)
                    }
                    
                    // å¯åŠ¨å¿ƒè·³ - 30ç§’é—´éš”
                    startHeartbeat(webSocket)
                }

                override fun onMessage(webSocket: WebSocket, bytes: okio.ByteString) {
                    try {
                        Log.d(tag, "ğŸ“© Received binary message (${bytes.size} bytes)")
                        handleBinaryMessage(bytes.toByteArray())
                    } catch (e: Exception) {
                        Log.e(tag, "âŒ Error handling binary message", e)
                        // ä¸è¦å› ä¸ºè§£æé”™è¯¯è€Œæ–­å¼€è¿æ¥ï¼Œç»§ç»­æ¥æ”¶ä¸‹ä¸€æ¡æ¶ˆæ¯
                    }
                }
                
                override fun onMessage(webSocket: WebSocket, text: String) {
                    try {
                        Log.d(tag, "Received text message (unexpected): $text")
                        // WebSocket åº”è¯¥åªè¿”å›äºŒè¿›åˆ¶ protobuf æ¶ˆæ¯ï¼Œä¸åº”è¯¥æœ‰æ–‡æœ¬æ¶ˆæ¯
                        // å¦‚æœæ”¶åˆ°æ–‡æœ¬æ¶ˆæ¯ï¼Œå¯èƒ½æ˜¯æœåŠ¡å™¨é”™è¯¯æˆ–è¿æ¥é—®é¢˜
                    } catch (e: Exception) {
                        Log.e(tag, "Error handling text message", e)
                    }
                }
                
                override fun onClosing(webSocket: WebSocket, code: Int, reason: String) {
                    Log.d(tag, "WebSocket closing: $code $reason")
                    cleanup()
                }
                
                override fun onClosed(webSocket: WebSocket, code: Int, reason: String) {
                    Log.d(tag, "WebSocket closed: $code $reason")
                    cleanup()
                    
                    scope.launch {
                        _connectionState.emit(ConnectionState.Disconnected)
                        
                        // è‡ªåŠ¨é‡è¿
                        if (shouldReconnect) {
                            delay(5000)
                            connect(userId, platform)
                        }
                    }
                }
                
                override fun onFailure(webSocket: WebSocket, t: Throwable, response: Response?) {
                    Log.e(tag, "âŒ WebSocket failure: ${t.javaClass.simpleName} - ${t.message}", t)
                    if (response != null) {
                        Log.e(tag, "Response code: ${response.code}, message: ${response.message}")
                    }
                    cleanup()
                    
                    scope.launch {
                        _connectionState.emit(ConnectionState.Error(t.message ?: "è¿æ¥å¤±è´¥"))
                        
                        // è‡ªåŠ¨é‡è¿
                        if (shouldReconnect) {
                            Log.d(tag, "â³ Will reconnect in 5 seconds...")
                            delay(5000)
                            connect(userId, platform)
                        }
                    }
                }
            })
            
        } catch (e: Exception) {
            Log.e(tag, "Error connecting to WebSocket", e)
            _connectionState.emit(ConnectionState.Error(e.message ?: "è¿æ¥å¤±è´¥"))
        }
    }
    
    /**
     * å‘é€è‰ç¨¿åŒæ­¥æ¶ˆæ¯
     */
    fun sendDraftInput(chatId: String, input: String) {
        if (!isConnected || webSocket == null) {
            Log.w(tag, "WebSocket not connected, cannot send draft")
            return
        }
        
        try {
            // å‚è€ƒç”¨æˆ·æä¾›çš„è‰ç¨¿åŒæ­¥æ ¼å¼
            val dataObject = JsonObject().apply {
                addProperty("chatId", chatId)
                addProperty("input", input)
                addProperty("deviceId", currentDeviceId)
            }
            val draftData = JsonObject().apply {
                addProperty("seq", UUID.randomUUID().toString().replace("-", ""))
                addProperty("cmd", "inputInfo")
                add("data", dataObject)
            }
            
            val draftJson = gson.toJson(draftData)
            Log.d(tag, "Sending draft input: $draftJson")
            webSocket?.send(draftJson)
            
        } catch (e: Exception) {
            Log.e(tag, "Error sending draft input", e)
        }
    }
    
    /**
     * æ–­å¼€è¿æ¥
     */
    fun disconnect() {
        Log.d(tag, "Disconnecting WebSocket")
        shouldReconnect = false
        cleanup()
        webSocket?.close(1000, "User disconnect")
        webSocket = null
    }
    
    /**
     * å¯åŠ¨å¿ƒè·³ - å‚è€ƒyh_user_sdk/core/ws.py
     */
    private fun startHeartbeat(webSocket: WebSocket) {
        heartbeatJob = scope.launch {
            while (isConnected && currentCoroutineContext().isActive) {
                try {
                    delay(30000) // 30ç§’å¿ƒè·³é—´éš”
                    
                    val heartbeatData = JsonObject().apply {
                        addProperty("seq", UUID.randomUUID().toString().replace("-", ""))
                        addProperty("cmd", "heartbeat")
                        add("data", JsonObject())
                    }
                    
                    val heartbeatJson = gson.toJson(heartbeatData)
                    Log.d(tag, "Sending heartbeat")
                    webSocket.send(heartbeatJson)
                    
                } catch (e: Exception) {
                    Log.e(tag, "Error sending heartbeat", e)
                    break
                }
            }
        }
    }

    /**
     * å¤„ç†äºŒè¿›åˆ¶æ¶ˆæ¯ - å‚è€ƒyh_user_sdk/core/ws.pyçš„decodeæ–¹æ³•
     */
    private fun handleBinaryMessage(bytes: ByteArray) {
        try {
            // æŒ‰ç…§yh_user_sdkçš„æ–¹å¼ï¼Œé¦–å…ˆå°è¯•è§£æä¸ºheartbeat_ackè·å–å‘½ä»¤ç±»å‹
            val tempMsg = heartbeat_ack.parseFrom(bytes)
            val cmd = tempMsg.info.cmd
            val seq = tempMsg.info.seq
            
            Log.d(tag, "Message command: $cmd, seq: $seq")
            
            when (cmd) {
                "login_ack" -> {
                    Log.d(tag, "âœ… Received login_ack (binary protobuf)")
                    // ç™»å½•å“åº”ï¼Œè¿æ¥å·²å®Œå…¨å»ºç«‹ï¼ˆå¦‚æœæœåŠ¡å™¨æœ‰å‘é€çš„è¯ï¼‰
                }
                
                "heartbeat_ack" -> {
                    Log.d(tag, "âœ… Received heartbeat_ack")
                    // å¿ƒè·³å“åº”ï¼Œè¿æ¥æ­£å¸¸
                }
                
                "push_message" -> {
                    // æ–°æ¶ˆæ¯æ¨é€
                    val pushMessage = push_message.parseFrom(bytes)
                    if (pushMessage.hasData() && pushMessage.data.hasMsg()) {
                        val protoMsg = pushMessage.data.msg
                        val chatMessage = convertWsMsgToMessage(protoMsg)
                        
                        // è¯¦ç»†æ—¥å¿—ç”¨äºè°ƒè¯•
                        Log.d(tag, "Push message details:")
                        Log.d(tag, "  - Message ID: ${chatMessage.msgId}")
                        Log.d(tag, "  - Sender: ${chatMessage.sender.chatId} (type: ${chatMessage.sender.chatType})")
                        Log.d(tag, "  - Target Chat: ${chatMessage.chatId} (type: ${chatMessage.chatType})")
                        Log.d(tag, "  - Receiver: ${chatMessage.recvId}")
                        Log.d(tag, "  - Content: ${chatMessage.content.text?.take(50) ?: "[éæ–‡æœ¬æ¶ˆæ¯]"}")
                        
                        scope.launch {
                            // å‘é€æ¶ˆæ¯äº‹ä»¶ä¾›UIæ›´æ–°
                            _messageEvents.emit(MessageEvent.NewMessage(chatMessage))
                            
                            // æ›´æ–°ä¼šè¯åˆ—è¡¨
                            _conversationUpdates.emit(ConversationUpdate.NewMessage(chatMessage))
                            
                            // æ˜¾ç¤ºé€šçŸ¥
                            showMessageNotification(chatMessage)
                        }
                        
                        Log.d(tag, "Received new message: ${chatMessage.msgId}")
                    }
                }
                
                "edit_message" -> {
                    // æ¶ˆæ¯ç¼–è¾‘
                    val editMessage = edit_message.parseFrom(bytes)
                    if (editMessage.hasData() && editMessage.data.hasMsg()) {
                        val protoMsg = editMessage.data.msg
                        val chatMessage = convertWsMsgToMessage(protoMsg)
                        
                        scope.launch {
                            _messageEvents.emit(MessageEvent.MessageEdited(chatMessage))
                            _conversationUpdates.emit(ConversationUpdate.MessageEdited(chatMessage))
                        }
                        
                        Log.d(tag, "Received edited message: ${chatMessage.msgId}")
                    }
                }
                
                "draft_input" -> {
                    // è‰ç¨¿åŒæ­¥ - æš‚æ—¶åªè®°å½•æ—¥å¿—
                    val draftInput = draft_input.parseFrom(bytes)
                    if (draftInput.hasData() && draftInput.data.hasDraft()) {
                        val draft = draftInput.data.draft
                        Log.d(tag, "Received draft input for chat ${draft.chatId}: ${draft.input}")
                        
                        scope.launch {
                            _messageEvents.emit(MessageEvent.DraftUpdated(draft.chatId, draft.input))
                        }
                    }
                }
                
                "bot_board_message" -> {
                    // æœºå™¨äººå…¬å‘Š
                    val botBoardMessage = bot_board_message.parseFrom(bytes)
                    if (botBoardMessage.hasData() && botBoardMessage.data.hasBoard()) {
                        val board = botBoardMessage.data.board
                        Log.d(tag, "Received bot board message from ${board.botId}: ${board.content}")
                        
                        scope.launch {
                            _messageEvents.emit(MessageEvent.BotBoardMessage(
                                board.botId, 
                                board.chatId, 
                                board.content
                            ))
                        }
                    }
                }
                
                "stream_message" -> {
                    // æµå¼æ¶ˆæ¯
                    val streamMsg = stream_message.parseFrom(bytes)
                    if (streamMsg.hasData() && streamMsg.data.hasMsg()) {
                        val msg = streamMsg.data.msg
                        Log.d(tag, "Received stream message for chat ${msg.chatId}, msgId: ${msg.msgId}, content: ${msg.content}")
                        
                        scope.launch {
                            _messageEvents.emit(MessageEvent.StreamMessage(
                                msgId = msg.msgId,
                                recvId = msg.recvId,
                                chatId = msg.chatId,
                                content = msg.content
                            ))
                        }
                    }
                }
                
                else -> {
                    Log.d(tag, "Unhandled message command: $cmd")
                }
            }
            
        } catch (e: Exception) {
            Log.e(tag, "Error parsing binary message", e)
        }
    }
    
    /**
     * å°†WebSocket Protoæ¶ˆæ¯è½¬æ¢ä¸ºåº”ç”¨å†…æ¶ˆæ¯æ¨¡å‹
     * æ³¨æ„ï¼šæ¶ˆæ¯åº”è¯¥æ”¾åœ¨protoMsg.chatIdå¯¹åº”çš„ä¼šè¯ä¸­ï¼Œè€Œä¸æ˜¯sender.chatId
     */
    private fun convertWsMsgToMessage(protoMsg: WsMsg): ChatMessage {
        val sender = com.yhchat.canary.data.model.MessageSender(
            chatId = protoMsg.sender.chatId,
            chatType = protoMsg.sender.chatType,
            name = protoMsg.sender.name,
            avatarUrl = protoMsg.sender.avatarUrl,
            tagOld = protoMsg.sender.tagOldList,
            tag = protoMsg.sender.tagList.map { tag ->
                com.yhchat.canary.data.model.MessageTag(
                    id = tag.id,
                    text = tag.text,
                    color = tag.color
                )
            }
        )

        val content = com.yhchat.canary.data.model.MessageContent(
            text = if (protoMsg.content.text.isNotEmpty()) protoMsg.content.text else null,
            buttons = if (protoMsg.content.buttons.isNotEmpty()) protoMsg.content.buttons else null,
            imageUrl = if (protoMsg.content.imageUrl.isNotEmpty()) protoMsg.content.imageUrl else null,
            fileName = if (protoMsg.content.fileName.isNotEmpty()) protoMsg.content.fileName else null,
            fileUrl = if (protoMsg.content.fileUrl.isNotEmpty()) protoMsg.content.fileUrl else null,
            form = if (protoMsg.content.form.isNotEmpty()) protoMsg.content.form else null,
            quoteMsgText = if (protoMsg.content.quoteMsgText.isNotEmpty()) protoMsg.content.quoteMsgText else null,
            stickerUrl = if (protoMsg.content.stickerUrl.isNotEmpty()) protoMsg.content.stickerUrl else null,
            postId = if (protoMsg.content.postId.isNotEmpty()) protoMsg.content.postId else null,
            postTitle = if (protoMsg.content.postTitle.isNotEmpty()) protoMsg.content.postTitle else null,
            postContent = if (protoMsg.content.postContent.isNotEmpty()) protoMsg.content.postContent else null,
            postContentType = if (protoMsg.content.postContentType.isNotEmpty()) protoMsg.content.postContentType else null,
            expressionId = if (protoMsg.content.expressionId.isNotEmpty()) protoMsg.content.expressionId else null,
            fileSize = if (protoMsg.content.fileSize > 0) protoMsg.content.fileSize else null,
            videoUrl = if (protoMsg.content.videoUrl.isNotEmpty()) protoMsg.content.videoUrl else null,
            audioUrl = if (protoMsg.content.audioUrl.isNotEmpty()) protoMsg.content.audioUrl else null,
            audioTime = if (protoMsg.content.audioTime > 0) protoMsg.content.audioTime else null,
            stickerItemId = if (protoMsg.content.stickerItemId > 0) protoMsg.content.stickerItemId else null,
            stickerPackId = if (protoMsg.content.stickerPackId > 0) protoMsg.content.stickerPackId else null,
            callText = if (protoMsg.content.callText.isNotEmpty()) protoMsg.content.callText else null,
            callStatusText = if (protoMsg.content.callStatusText.isNotEmpty()) protoMsg.content.callStatusText else null,
            width = if (protoMsg.content.width > 0) protoMsg.content.width else null,
            height = if (protoMsg.content.height > 0) protoMsg.content.height else null
        )

        val cmd = if (protoMsg.hasCmd()) {
            com.yhchat.canary.data.model.MessageCmd(
                name = protoMsg.cmd.name,
                type = protoMsg.cmd.id.toInt()
            )
        } else null

        // åˆ¤æ–­æ¶ˆæ¯æ–¹å‘ï¼šå½“sender.chatId == recvIdæ—¶ï¼Œè¯´æ˜æ˜¯è‡ªå·±å‘çš„æ¶ˆæ¯ï¼ˆå¤šè®¾å¤‡åŒæ­¥ï¼‰
        val direction = if (protoMsg.sender.chatId == protoMsg.recvId) {
            "right" // è‡ªå·±å‘é€çš„æ¶ˆæ¯
        } else {
            "left" // å¯¹æ–¹å‘é€çš„æ¶ˆæ¯
        }
        
        return ChatMessage(
            msgId = protoMsg.msgId,
            sender = sender,
            direction = direction,
            contentType = protoMsg.contentType,
            content = content,
            sendTime = protoMsg.timestamp,
            cmd = cmd,
            msgDeleteTime = if (protoMsg.deleteTime > 0) protoMsg.deleteTime else null,
            quoteMsgId = if (protoMsg.quoteMsgId.isNotEmpty()) protoMsg.quoteMsgId else null,
            msgSeq = protoMsg.msgSeq,
            editTime = if (protoMsg.editTime > 0) protoMsg.editTime else null,
            // å…³é”®ä¿®å¤ï¼šä½¿ç”¨protoMsgçš„chatIdå’ŒchatTypeï¼Œè€Œä¸æ˜¯senderçš„
            chatId = protoMsg.chatId,
            chatType = protoMsg.chatType,
            recvId = protoMsg.recvId
        )
    }
    
    /**
     * æ˜¾ç¤ºæ¶ˆæ¯é€šçŸ¥
     */
    private fun showMessageNotification(message: ChatMessage) {
        try {
            // ä¸ä¸ºè‡ªå·±çš„æ¶ˆæ¯æ˜¾ç¤ºé€šçŸ¥
            if (message.sender.chatId == currentUserId) {
                return
            }
            
            val notificationManager = context.getSystemService(Context.NOTIFICATION_SERVICE) as NotificationManager
            
            // æ„å»ºé€šçŸ¥å†…å®¹
            val senderName = message.sender.name.ifEmpty { "æœªçŸ¥ç”¨æˆ·" }
            val messageContent = when (message.contentType) {
                8 -> "HTMLæ¶ˆæ¯" // HTMLæ¶ˆæ¯
                3 -> "Markdownæ¶ˆæ¯" // Markdownæ¶ˆæ¯
                else -> when {
                    !message.content.text.isNullOrEmpty() -> message.content.text
                    !message.content.imageUrl.isNullOrEmpty() -> "[å›¾ç‰‡]"
                    !message.content.fileUrl.isNullOrEmpty() -> "[æ–‡ä»¶]"
                    !message.content.audioUrl.isNullOrEmpty() -> "[è¯­éŸ³]"
                    !message.content.videoUrl.isNullOrEmpty() -> "[è§†é¢‘]"
                    !message.content.stickerUrl.isNullOrEmpty() -> "[è¡¨æƒ…]"
                    else -> "[æ¶ˆæ¯]"
                }
            }
            
            // ä½¿ç”¨æ­£ç¡®çš„chatIdå’ŒchatTypeæ¥ç¡®å®šä¼šè¯
            val targetChatId = message.chatId ?: message.sender.chatId
            val targetChatType = message.chatType ?: message.sender.chatType
            
            // ç¡®å®šä¼šè¯åç§° - å°è¯•ä»ç¼“å­˜è·å–çœŸå®åç§°
            val conversationTitle = getConversationTitle(targetChatId, targetChatType, senderName)
            
            // ç‚¹å‡»é€šçŸ¥çš„Intent - è·³è½¬åˆ°æ­£ç¡®çš„ä¼šè¯
            val intent = Intent(context, MainActivity::class.java).apply {
                flags = Intent.FLAG_ACTIVITY_NEW_TASK or Intent.FLAG_ACTIVITY_CLEAR_TASK
                putExtra("chat_id", targetChatId)
                putExtra("chat_type", targetChatType)
            }
            
            val pendingIntent = PendingIntent.getActivity(
                context, 
                targetChatId.hashCode(),
                intent,
                PendingIntent.FLAG_UPDATE_CURRENT or PendingIntent.FLAG_IMMUTABLE
            )
            
            // æ„å»ºé€šçŸ¥
            val notification = NotificationCompat.Builder(context, NOTIFICATION_CHANNEL_ID)
                .setSmallIcon(R.drawable.ic_launcher_foreground)
                .setContentTitle(conversationTitle)
                .setContentText("$senderNameï¼š$messageContent")
                .setContentIntent(pendingIntent)
                .setAutoCancel(true)
                .setPriority(NotificationCompat.PRIORITY_DEFAULT)
                .build()
            
            // æ˜¾ç¤ºé€šçŸ¥ï¼Œä½¿ç”¨æ­£ç¡®çš„chatIdçš„å“ˆå¸Œä½œä¸ºé€šçŸ¥ID
            notificationManager.notify(
                NOTIFICATION_ID_BASE + targetChatId.hashCode(),
                notification
            )
            
            Log.d(tag, "Shown notification for message from $senderName")
            
        } catch (e: Exception) {
            Log.e(tag, "Error showing notification", e)
        }
    }
    
    /**
     * è·å–ä¼šè¯æ ‡é¢˜
     */
    private fun getConversationTitle(chatId: String, chatType: Int, senderName: String): String {
        return try {
            // å°è¯•ä»ç¼“å­˜ä¸­è·å–ä¼šè¯åç§°
            val cacheRepository = CacheRepository(context)
            val cachedConversations = runBlocking {
                cacheRepository.getCachedConversationsSync()
            }
            
            val cachedConversation = cachedConversations.find { it.chatId == chatId }
            
            if (cachedConversation != null && cachedConversation.name.isNotEmpty()) {
                cachedConversation.name
            } else {
                // ç¼“å­˜ä¸­æ²¡æœ‰æ‰¾åˆ°ï¼Œä½¿ç”¨é»˜è®¤åç§°
                when (chatType) {
                    1 -> senderName // ç§èŠç›´æ¥ç”¨å‘é€è€…åç§°
                    2 -> "ç¾¤èŠ" // ç¾¤èŠ
                    3 -> senderName // æœºå™¨äººèŠå¤©ç”¨æœºå™¨äººåç§°
                    else -> "ä¼šè¯"
                }
            }
        } catch (e: Exception) {
            Log.w(tag, "Failed to get conversation title from cache", e)
            // å‡ºé”™æ—¶ä½¿ç”¨é»˜è®¤åç§°
            when (chatType) {
                1 -> senderName // ç§èŠç›´æ¥ç”¨å‘é€è€…åç§°
                2 -> "ç¾¤èŠ" // ç¾¤èŠ
                3 -> senderName // æœºå™¨äººèŠå¤©ç”¨æœºå™¨äººåç§°
                else -> "ä¼šè¯"
            }
        }
    }
    
    /**
     * åˆ›å»ºé€šçŸ¥æ¸ é“
     */
    private fun createNotificationChannel() {
        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.O) {
            val channel = NotificationChannel(
                NOTIFICATION_CHANNEL_ID,
                "èŠå¤©æ¶ˆæ¯",
                NotificationManager.IMPORTANCE_DEFAULT
            ).apply {
                description = "æ¥æ”¶æ–°çš„èŠå¤©æ¶ˆæ¯é€šçŸ¥"
            }
            
            val notificationManager = context.getSystemService(Context.NOTIFICATION_SERVICE) as NotificationManager
            notificationManager.createNotificationChannel(channel)
        }
    }
    
    /**
     * æ¸…ç†èµ„æº
     */
    private fun cleanup() {
        isConnected = false
        heartbeatJob?.cancel()
        heartbeatJob = null
    }

    /**
     * é”€æ¯æœåŠ¡
     */
    fun destroy() {
        shouldReconnect = false
        disconnect()
        scope.cancel()
    }
}

/**
 * WebSocketè¿æ¥çŠ¶æ€
 */
sealed class ConnectionState {
    object Disconnected : ConnectionState()
    object Connecting : ConnectionState()
    object Connected : ConnectionState()
    data class Error(val message: String) : ConnectionState()
}

/**
 * æ¶ˆæ¯äº‹ä»¶
 */
sealed class MessageEvent {
    data class NewMessage(val message: ChatMessage) : MessageEvent()
    data class MessageEdited(val message: ChatMessage) : MessageEvent()
    data class MessageDeleted(val msgId: String) : MessageEvent()
    data class DraftUpdated(val chatId: String, val input: String) : MessageEvent()
    data class BotBoardMessage(val botId: String, val chatId: String, val content: String) : MessageEvent()
    data class StreamMessage(val msgId: String, val recvId: String, val chatId: String, val content: String) : MessageEvent()
}

/**
 * ä¼šè¯æ›´æ–°äº‹ä»¶
 */
sealed class ConversationUpdate {
    data class NewMessage(val message: ChatMessage) : ConversationUpdate()
    data class MessageEdited(val message: ChatMessage) : ConversationUpdate()
}